--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 {%- assign _ = site.data.includes.footer[page.locale] -%}
 
-<footer class="bg-gray100 col align-center px-4 pt-7 pb-5">
-  <div class="maxwidth-7 width-full col sp-5 q-lg-sp-6">
+<footer class="bg-gray100 col align-center px-4 py-5">
+  <div class="maxwidth-7 width-full col sp-2 q-lg-sp-6">
     <div class="row sp-3 align-center q-lg-col q-lg-sp-5">
       <div class="row sp-2 flex-footer-space">
         <a class="button-text " href="https://www.instagram.com/dlabs_potsdam/" target="_blank">
@@ -23,12 +23,19 @@
         {% endfor %}
       </div>
       <div class="push"></div>
-      <div class="col sp-2 align-end q-lg-align-center flex-footer-space">
-        <a class="button-text" href="https://www.silicon-sanssouci.org/" target="_blank">
-          <img alt="Silicon Sanssouci" class="height-5" src="/assets/images/logo_sisa.svg" />
-        </a>
-        <div class="text-xxs">
-          Mitglied im Silicon Sanssouci e.V.
+      <div class="col pl-7 q-lg-pl-0 sp-2 flex-footer-space">
+        <div class="row text-xxs font-bold">
+          Mitglied im
+        </div>
+        <div class="row pb-1">
+          <a class="button-text" href="https://www.silicon-sanssouci.org/" target="_blank">
+            <img alt="Silicon Sanssouci" class="height-5" src="/assets/images/logo_sisa.svg" />
+          </a>
+        </div>
+        <div class="row">
+          <a class="button-text" href="https://www.medianet-bb.de" target="_blank">
+            <img alt="media:net" class="height-4" src="/assets/images/partners/logo_medianet.svg" />
+          </a>
         </div>
       </div>
     </div>
