add apply button link

--- a/_layouts/job.html
+++ b/_layouts/job.html
@@ -21,7 +21,7 @@ layout: default
           <div class="markdown text-sm">{{page.first_paragraph | markdownify}}</div>
         </div>
         <div class="row justify-end pr-6">
-          <a class="button-text px-6 overflow-visible" href="#next">
+          <a class="button-text" href="{{_.team_fit_url}}">
             {% asset {{_.apply_now_button}} %}
           </a>
         </div>
