--- a/assets/css/_tokens.scss
+++ b/assets/css/_tokens.scss
@@ -1,5 +1,6 @@
 $spacings: (
   0: 0,
+  px: 1px,
   1: 0.5rem,
   2: 0.75rem,
   3: 1rem,
@@ -8,6 +9,41 @@ $spacings: (
   6: 3rem,
   7: 4rem,
   8: 6rem,
+  // tailwind spacing
+  t0\.5: 0.125rem,
+  t1: 0.25rem,
+  t1\.5: 0.375rem,
+  t2: 0.5rem,
+  t2\.5: 0.625rem,
+  t3: 0.75rem,
+  t3\.5: 0.875rem,
+  t4: 1rem,
+  t5: 1.25rem,
+  t6: 1.5rem,
+  t7: 1.75rem,
+  t8: 2rem,
+  t9: 2.25rem,
+  t10: 2.5rem,
+  t11: 2.75rem,
+  t12: 3rem,
+  t14: 3.5rem,
+  t16: 4rem,
+  t20: 5rem,
+  t24: 6rem,
+  t28: 7rem,
+  t32: 8rem,
+  t36: 9rem,
+  t40: 10rem,
+  t44: 11rem,
+  t48: 12rem,
+  t52: 13rem,
+  t56: 14rem,
+  t60: 15rem,
+  t64: 16rem,
+  t72: 18rem,
+  t80: 20rem,
+  t96: 24rem,
+
 );
 
 $dimensions: (
