--- a/_includes/benefits-slider.html
+++ b/_includes/benefits-slider.html
@@ -5,10 +5,10 @@
   <div class="carousel">
     {%- for benefit in _.benefits -%}
       <div>
-        <div class="row sp-8 px-5 q-md-col q-md-sp-2 align-start">
+        <div class="row sp-5 px-5 q-md-col q-md-sp-2 align-center">
           <div class="no-shrink py-3">
             <div class="relative">
-              {% asset {{benefit.img}} class="rounded-full width-8 height-8" %}
+              {% asset {{benefit.img}} class="rounded-full width-10 height-10" %}
             </div>
           </div>
           <div class="col sp-3">
