--- a/_includes/jobs-slider.html
+++ b/_includes/jobs-slider.html
@@ -5,11 +5,11 @@
   <div class="carousel">
     {%- for slide in _.slides -%}
       <div>
-        <div class="row sp-8 px-5 q-md-col q-md-sp-2 align-start">
+        <div class="row sp-5 px-5 q-md-col q-md-sp-2 align-center">
           <div class="no-shrink py-3">
             <div class="relative">
-              {% asset {{slide.img}} class="rounded-full width-8 height-8" %}
-              {% asset icons/icon-quotes.svg class="absolute height-5 right-0" style="bottom:-1rem;" %}
+              {% asset {{slide.img}} class="rounded-full height-10 width-10" %}
+              {% asset icons/icon-quotes.svg class="absolute height-6 right-0" style="bottom:-0.5rem;right:-0.5rem;" %}
             </div>
           </div>
           <div class="col sp-3">
