--- a/_includes/pages/jobs.html
+++ b/_includes/pages/jobs.html
@@ -3,18 +3,17 @@
 
 <div class="height-screen text-white relative col justify-center align-center px-4 py-5">
   <div class="absolute inset-full bg-blue" data-image-fader>   
-    {% asset dlabs_jobs-slider-12.jpg class="absolute inset-full hidden"%}   
-    {% asset dlabs_jobs-slider-2.jpg class="absolute inset-full hidden"%}
-    {% asset dlabs_jobs-slider-3.jpg class="absolute inset-full hidden"%}
-    {% asset dlabs_jobs-slider-4.jpg class="absolute inset-full hidden"%}
-    {% asset dlabs_jobs-slider-5.jpg class="absolute inset-full hidden"%}
-    {% asset dlabs_jobs-slider-6.jpg class="absolute inset-full hidden"%}
-    {% asset dlabs_jobs-slider-7.jpg class="absolute inset-full hidden"%}
-    {% asset dlabs_jobs-slider-8.jpg class="absolute inset-full hidden"%}
-    {% asset dlabs_jobs-slider-9.jpg class="absolute inset-full hidden"%}
-    {% asset dlabs_jobs-slider-10.jpg class="absolute inset-full hidden"%}
+    {% asset jobs-slider/jobs-slider-2.jpg class="absolute inset-full hidden"%}   
+    {% asset jobs-slider/jobs-slider-3.jpg class="absolute inset-full hidden"%}
+    {% asset jobs-slider/jobs-slider-4.jpg class="absolute inset-full hidden"%}
+    {% asset jobs-slider/jobs-slider-5.jpg class="absolute inset-full hidden"%}
+    {% asset jobs-slider/jobs-slider-6.jpg class="absolute inset-full hidden"%}
+    {% asset jobs-slider/jobs-slider-7.jpg class="absolute inset-full hidden"%}
+    {% asset jobs-slider/jobs-slider-8.jpg class="absolute inset-full hidden"%}
+    {% asset jobs-slider/jobs-slider-9.jpg class="absolute inset-full hidden"%}
+    {% asset jobs-slider/jobs-slider-10.jpg class="absolute inset-full hidden"%}
     <!-- last image should not be hidden, because it is shown first -->
-    {% asset dlabs_jobs-slider-11.jpg class="absolute inset-full"%}
+    {% asset jobs-slider/jobs-slider-1.jpg class="absolute inset-full"%}
   </div>
 
   <div class="font-heading text-xxxl q-md-text-xl maxwidth-7 width-full relative zindex-3">{{_.title_text | markdownify}}</div>
@@ -35,7 +34,7 @@
   <div class="col sp-6 align-center width-full">
     <div class="maxwidth-7 width-full">
       <div class="uppercase font-heading font-bold text-blue text-sm lead-line">
-        {{_.list_title}}
+        {{_.list_title}}*
       </div>
     </div>
 
@@ -54,8 +53,8 @@
 
     <div class="width-full maxwidth-5 col sp-6">
       <div class="col sp-4">
+        <div id="inclusivity" class="scroll-margin-top"><span class="text-blue">*</span>{{_.inclusivity_text}}</div>
         <div>{{_.initiative_text | markdownify}}</div>
-        <div>{{_.inclusivity_text | markdownify}}</div>
       </div>
       <div class="col align-center">
         <a class="button is-black" href="{{_.initiative_button_target}}">
@@ -72,4 +71,4 @@
 
 
 {%- include contact.html contact=_.contact-%}
-{%- include locations.html is_white=true with_map=true -%}
+<!-- {%- include locations.html is_white=true with_map=true -%} -->
