add header offset to jobs page image slider

--- a/_includes/pages/jobs.html
+++ b/_includes/pages/jobs.html
@@ -2,7 +2,7 @@
 {% assign job_pages = site.pages | where: "kind", "jobPosting" | where: "locale", page.locale %}
 
 <div class="height-screen text-white relative col justify-center align-center px-4 py-5">
-  <div class="absolute inset-full bg-blue" data-image-fader>   
+  <div class="absolute inset-header bg-blue" data-image-fader>   
     {% asset jobs-slider/jobs-slider-2.jpg class="absolute inset-full hidden"%}
     {% asset jobs-slider/jobs-slider-3.jpg class="absolute inset-full hidden"%}
     {% asset jobs-slider/jobs-slider-4.jpg class="absolute inset-full hidden"%}
