--- a/assets/css/_carousel.scss
+++ b/assets/css/_carousel.scss
@@ -46,7 +46,7 @@
         }
       }
       &.slick-active button {
-        background-color: $blue
+        background-color: $blue;
       }
     }
   }
