--- a/assets/css/_approach.scss
+++ b/assets/css/_approach.scss
@@ -6,7 +6,7 @@
   height: 20vmax;
   border-radius: 50%;
   border: 15px solid $blue;
-  transform: translate3d(0, 33%, 0) scale(0.10);
+  transform: translate3d(0, 33%, 0) scale(0.1);
 
   transition: transform 0.75s ease-out;
 
@@ -16,7 +16,13 @@
   }
 }
 .approach-curtain {
-  background: linear-gradient(180deg, rgba(255, 255, 255, 1) 5rem, rgba(255, 255, 255, 0) 6rem, rgba(255, 255, 255, 0) 55%, rgba(255, 255, 255, 1) 65%);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 1) 5rem,
+    rgba(255, 255, 255, 0) 6rem,
+    rgba(255, 255, 255, 0) 55%,
+    rgba(255, 255, 255, 1) 65%
+  );
 }
 
 .approach-scroll-screen {
