fix: new google maps API key

--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,3 +1,7 @@
 <div class="height-14 relative zindex-1 q-md-height-13" id="map">
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAh2lwsSwow8EApTVpaBWejLqo6wqEyqC4&callback=initMap"></script>
+  <script
+    async
+    defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSKny5RZ_dJXSbvSwyyaiqCi4wTk-6N84&callback=initMap"
+  ></script>
 </div>
