--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,13 +4,13 @@
   <div class="maxwidth-7 width-full col sp-2 q-lg-sp-6">
     <div class="row sp-3 align-center q-lg-col q-lg-sp-5">
       <div class="row sp-2 flex-footer-space">
-        <a class="button-text " href="https://www.instagram.com/dlabs_potsdam/" target="_blank">
+        <a class="button-text" href="https://www.instagram.com/dlabs_potsdam/" target="_blank">
           <img alt="Instagram" class="height-3" src="/assets/images/icons/icon-instagram.svg" />
         </a>
-        <a class="button-text " href="https://twitter.com/d_labs" target="_blank">
-          <img alt="Twitter" class="height-3" src="/assets/images/icons/icon-twitter.svg" />
+        <a class="button-text" href="https://x.com/d_labs" target="_blank">
+          <img alt="X" class="height-3" src="/assets/images/icons/icon-x.svg" />
         </a>
-        <a class="button-text " href="https://de.linkedin.com/company/d-labs" target="_blank">
+        <a class="button-text" href="https://de.linkedin.com/company/d-labs" target="_blank">
           <img alt="Linkedin" class="height-3" src="/assets/images/icons/icon-linkedin.svg" />
         </a>
       </div>
